# xai

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .semgrepignore  .yamllint.yml  AGENTS.md  AGENT_PROGRESS  AGENT_PROGRESS.md  AI_NODE_OPERATOR_QUESTIONING_TEST_REPORT.md  AI_POOL_STRICT_LIMITS_TEST_COVERAGE_REPORT.md  AI_PROVIDER_FIXES_QUICK_REF.md  AI_PROVIDER_VERIFICATION_CHECKLIST.md  AI_SAFETY_CONTROLS_API_COVERAGE_SUMMARY.txt  AI_SAFETY_CONTROLS_API_TEST_REPORT.md  API_WALLET_INTEGRATION_TESTS_SUMMARY.md  API_WALLET_TESTS_QUICK_REF.md  API_WALLET_TEST_VERIFICATION.txt  APPLY_GLOBALLY_INSTRUCTIONS.md  ARCHITECTURE_REVIEW.md  AUDIT_PREPARATION_QUICK_REFERENCE.md  AUTHORS  AUTO_SWITCHING_AI_EXECUTOR_COVERAGE_REPORT.md  BANDIT_SCAN_COMPLETE.txt  BLOCKCHAIN_MODULES_NO_TESTS.txt  BLOCK_EXPLORER_API.md  BLOCK_EXPLORER_IMPLEMENTATION.md  BLOCK_EXPLORER_INDEX.md  BLOCK_EXPLORER_PERFORMANCE.md  BLOCK_EXPLORER_QUICK_START.md  BLOCK_EXPLORER_SUMMARY.md  BLOCK_EXPLORER_VERIFICATION.md  BLOCK_INDEX_IMPLEMENTATION.md  C:UsersdecriGitClonesCryptoOVERALL_COVERAGE_STATUS.txt  C:UsersdecriGitClonesCryptoanalyze_current_coverage.py  (+185 more)
.claude/: CLAUDE.md
.github/: CICD_SETUP_GUIDE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  QUICK_START.md  README_BADGES_TEMPLATE.md  SETUP_CHECKLIST.md  dependabot.yml  pull_request_template.md  release.yml
.security/: config.yml
My Stuff/: Critical Priority security.txt
XAI/: __init__.py  blockchain.py  create_founder_wallets.py  crypto_deposit_manager.py  exchange_wallet.py  gamification.py  market_maker.py  node.py  node.py.v1.backup  requirements.txt  wallet.py
aixn/: .gitignore  AI_SAFETY_CONTROLS.md  ANONYMITY_PROTECTION_COMPLETE.md  CHAIN_VALIDATION_INTEGRATION.md  CHAIN_VALIDATION_SUMMARY.md  COMPLETE_TOKENOMICS_AND_DISTRIBUTION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_QUICKSTART.md  IMPLEMENTATION_STATUS.md  LICENSE  NETWORK_CONFIGURATION.md  README.md  SECURITY_REVIEW_CHECKLIST.md  START_TESTNET.bat  START_TESTNET.sh  TIME_CAPSULES.md  VALIDATION_QUICK_REFERENCE.md  WALLET_BONUS_SYSTEM.md  ai_metrics.py  block_explorer.py  blockchain_ai_bridge.py  burn_history.json  config.example.json  config_manager.py  create_time_capsule_reserve.py  docker-compose.yml  exchange_wallet.py  explorer.py  generate_premine.py  genesis_testnet.json  integrate_ai_systems.py  mining_bonuses.py  nonce_tracker.py  openai.py  requirements.txt  run-python.ps1  send-transaction.py  social_recovery.py  start-explorer.ps1  start-node.ps1  (+8 more)
benchmarks/: crypto_report.json
config/: README.md  cors.yaml  p2p_versions.yaml
core/: node.py
data_test/: block_index.db  node_identity.json  slashing.db
data_test_api/: block_index.db  checksum.json  node_identity.json  slashing.db
data_test_api2/: block_index.db  node_identity.json  slashing.db
data_test_api3/: block_index.db  node_identity.json  slashing.db
data_test_api5/: block_index.db  node_identity.json  slashing.db
deploy/: CLOUD_DEPLOYMENT.md  COMPLETION_REPORT.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DISASTER_RECOVERY.md  INDEX.md  QUICK_START.md  README.md  ROLLBACK_PROCEDURE.md  RUNBOOK.md  docker-one-liner.sh
docker/: QUICK_REFERENCE.md  README.md  docker-compose.override.yml.example  docker-compose.yml
docs/: AIXN_Marketing_Campaign_Plan.md  AML_REPORTING.md  API_KEY_ENCRYPTION_MIGRATION.md  API_REFERENCE.md  AUTHENTICATION.md  BLOCKCHAIN_ARCHITECTURE_DIAGRAM.txt  BLOCKCHAIN_METHOD_MAPPING.md  BLOCKCHAIN_PROJECT_BEST_PRACTICES.md  BLOCKCHAIN_REFACTORING_INDEX.md  BLOCKCHAIN_REFACTORING_PLAN.md  BLOCKCHAIN_REFACTORING_QUICKSTART.md  BLOCKCHAIN_REFACTORING_SUMMARY.md  CLI.md  CLIENT_DIVERSITY_ROADMAP.md  CLI_GUIDE.md  CLI_USAGE.md  COVERAGE-AUTOMATION-GUIDE.md  DOCKER_DEPLOYMENT.md  EMBEDDED_WALLETS.md  ERROR_HANDLING.md  FLASK_SECRET_KEY_SOLUTION.md  GENESIS_DISTRIBUTION.md  HARDWARE_WALLET.md  INCIDENT_RESPONSE_RUNBOOK.md  INTEROP.md  JWT_BLACKLIST_CLEANUP.md  K8S_BACKUP.md  K8S_BLOCKCHAIN_TESTING.md  K8S_BYZANTINE_TESTING.md  K8S_CERTMANAGER.md  K8S_CHAOS_TESTING.md  K8S_EXTERNAL_SECRETS.md  K8S_GITOPS.md  K8S_MTLS.md  K8S_SNAPSHOTS.md  K8S_SOAK_TESTING.md  K8S_STATE_SYNC_UPGRADE.md  K8S_TESTING.md  K8S_UPGRADE_TESTING.md  K8S_VPA.md  (+38 more)
docs-site/: DEPLOYMENT_SUMMARY.md  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
examples/: atomic_swap_example.py  check_balance.py  create_wallet.py  monitoring_tool_example.py  query_blockchain.py  sandbox_demo.py  send_transaction.py  trading_bot_example.py  wallet_demo.py
explorer/: QUICKSTART.md  README.md  xai-explorer.py
flask-app/: requirements.txt
installers/: .gitignore  COMPLETION_REPORT.md  COMPLETION_REPORT_INSTALLERS.md  DIRECTORY_TREE.txt  DIRECTORY_TREE_FINAL.txt  INDEX.md  INSTALL.md  INSTALLERS_SUMMARY.md  Makefile  QUICKSTART.md  README-BUILD.md  README.md  SUMMARY.md  docker-install.sh  install-xai.ps1  install-xai.sh  verify-installation.sh  xai.rb  xai.spec
k8s/: 00-START-HERE.md  BLOCKCHAIN_TESTING_QUICKREF.md  DEPLOYMENT-SUMMARY.md  Dockerfile  INDEX.md  LOCAL_CLUSTER.md  MANIFEST.txt  QUICK-REFERENCE.md  RATE_LIMITING_SETUP.md  README.md  apply-monitoring-overlays.sh  argocd-app-xai.yaml  configmap.staging.yaml  configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  kubeconfig.staging-prod.example  mev-network-policy.yaml  monitoring.yaml  namespace.yaml  networkpolicy.dev.yaml  networkpolicy.prod.yaml  networkpolicy.yaml  pod-security-template.yaml  pv.yaml  rate-limit-test-deployment.yaml  rbac.yaml  secret.yaml  service.quic.yaml  service.yaml  statefulset.yaml  validator-keys-rotated.yaml  values-p2p-hardening.yaml  verify-deployment.sh  verify-monitoring-overlays.sh  vpa.yaml
mobile-app/: .env.example  .eslintrc.js  .gitignore  .prettierrc.js  ARCHITECTURE.md  PROJECT_MANIFEST.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  app.json  babel.config.js  index.js  jest.config.js  jest.setup.js  metro.config.js  package.json  (+2 more)
(+3005 files in other folders)
