# PEP 518: Build system requirements
# This file specifies the build system requirements and project metadata

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-blockchain"
version = "0.2.0"
description = "Python-based proof-of-work blockchain implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "XAI contributors"},
]
keywords = [
    "blockchain",
    "cryptocurrency",
    "ai",
    "consensus",
    "distributed-systems",
    "web3"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "secp256k1==0.14.0", # Added for P2P message signing
    "websockets>=12.0", # For persistent P2P connections
    "dnspython>=2.6.0", # For DNS-based peer discovery
    "argon2-cffi>=21.3.0", # For key derivation in wallet
    "base58>=2.1.0",
    "mnemonic>=0.21",
    "bip-utils>=2.8.0",
    "qrcode[pil]>=7.4",
    "pyotp>=2.9.0",
    "PyJWT>=2.9.0",
    "flask-sock>=0.7.0",
    "py-ecc>=8.0.0",
    "pqcrypto==0.3.4",
    "gmpy2>=2.2.0",
    "click>=8.1.0", # For enhanced CLI
    "rich>=13.7.0", # For beautiful terminal output
    "aiohttp>=3.9.0", # For async HTTP in push notifications
    "httpx>=0.27.0", # For async HTTP client in P2P module
    "rlp>=4.0.0", # For EVM RLP encoding
    "web3>=6.0.0", # For Web3/EVM interactions
    "eth-account>=0.11.0", # For Ethereum account management
    "flask-compress>=1.15.0", # For API response compression
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "faker>=22.0.0",
    "hypothesis>=6.92.0",

    # Code Quality
    "black>=24.0.0",
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",

    # Security
    "bandit>=1.7.6",
    "safety>=3.0.0",
    "semgrep>=1.50.0",
    "pip-audit>=2.6.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.0",

    # Development Tools
    "pre-commit>=3.6.0",
    "commitizen>=3.13.0",

    # Performance Testing
    "locust>=2.20.0",
    "schemathesis>=4.6.3",
    "rich>=13.9.4,<14.0.0",
]
network = [
    "aioquic>=1.1.0",
]

blockchain = [
    "web3>=6.13.0",
    "eth-account>=0.10.0",
    "eth-utils>=3.0.0",
]

ai = [
    "anthropic>=0.8.0",
    "openai>=1.6.0",
    "google-generativeai>=0.3.0",
]

#[project.urls]
# Repository and issue tracker intentionally omitted during migration

[project.scripts]
xai = "xai.cli.main:main"
xai-node = "xai.core.node:main"
xai-wallet = "xai.wallet.cli:main"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | env
  | build
  | dist
  | node_modules
  | archived_.*
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["archived_*", "node_modules/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "-vv",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
    "e2e: marks tests as end-to-end tests",
]
norecursedirs = [
    "archived_*",
    "node_modules",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/archived_*/*",
    "*/node_modules/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
exclude = "(?x)(src/xai/archive/.*|archived_.*|.*/test_.*\\.py|.*/tmp_.*\\.py|.*_test\\.py)"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Bandit security configuration
[tool.bandit]
exclude_dirs = [
    "tests",
    "archived_*",
    "node_modules",
]
skips = ["B101", "B601"]

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
]

# Setuptools configuration
[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
xai = ["py.typed", "*.yaml", "*.json"]
